care-australia-uat/force-app/main/default/objects/Stripe_Config__mdt/Stripe_Config__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata handles the API Connection and there API calls.</description>
    <label>Stripe Config</label>
    <pluralLabel>Stripe Configs</pluralLabel>
</CustomObject>