care-australia-uat/force-app/main/default/objects/Stripe_Config__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>This is API connection KEY</description>
    <inlineHelpText>Enter API Key</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>