care-australia-uat/force-app/main/default/objects/Stripe_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>This field contains endpoint of the API calls</description>
    <inlineHelpText>Enter API Endpoint</inlineHelpText>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>