care-australia-uat/force-app/main/default/objects/Stripe_Config__mdt/fields/HeaderParameters__c.field-meta.xml
<CustomField>
    <fullName>HeaderParameters__c</fullName>
    <description>This contain parameter for the API Call</description>
    <label>HeaderParameters</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>