care-australia-uat/force-app/main/default/objects/Stripe_Config__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Enable/Disable the API</description>
    <inlineHelpText>Check if you want to enable</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>