care-australia-uat/force-app/main/default/objects/Stripe_Config__mdt/listViews/All_Stripe_Config.listView-meta.xml
<ListView>
    <fullName>All_Stripe_Config</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Endpoint__c</columns>
    <columns>IsActive__c</columns>
    <columns>Method__c</columns>
    <columns>Timeout__c</columns>
    <columns>HeaderParameters__c</columns>
    <columns>API_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Stripe Config</label>
    <language>en_US</language>
</ListView>